# ChangeLog file for java
# This file is updated with Maddlog

* Thu Sep 29 2016 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Corrected ResultSet methods: getByte(), getBigDecimal(), getShort(),
  getInt(), getLong(), getFloat() and getDouble() in case the conversion
  to the native type failed due to a Number Format conversion error.
  It used to silently ignore the conversion error and return 0 instead,
  which is not correct.  Now it throws an SQLException with message
  "Could not convert value to a number." and SQLstate "22003" meaning:
  Numeric value out of range.

* Thu Sep 22 2016 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Improved JdbcClient program when doing dump of table definition.  It now
  outputs CREATE TABLE definition more similar to mclient program.

* Thu Sep 15 2016 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Improved performance of following JDBC ResultSet and ResultSetMetaData
  methods:
  - ResultSet.getBoolean(column)
  - ResultSet.getBinaryStream(column)
  - ResultSet.getBytes(column)
  - ResultSet.getObject(column)
  - ResultSet.getObject(column, map)
  - ResultSet.getDate(column)
  - ResultSet.getTime(column)
  - ResultSet.getTimestamp(column)
  - ResultSet.getDate(column, calendar)
  - ResultSet.getTime(column, calendar)
  - ResultSet.getTimestamp(column, calendar)
  - ResultSetMetaData.getColumnClassName(column)
  - ResultSetMetaData.getColumnType(column)
  - ResultSetMetaData.isCaseSensitive(column)
  - ResultSetMetaData.isSigned(column)
  - ResultSetMetaData.getPrecision(column)

* Thu Sep  8 2016 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Improved JdbcClient program by fixing some resource leaks.
- Extended JdbcClient program by showing elapsed time information for each
  query or command when started in interactive mode (no -f was used at startup).

* Thu Sep  1 2016 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>