@@ -128,6 +128,7 @@ Copyright 1997 - July 2008 CWI, August 2008 - 2016 MonetDB B.V.
     <antcall target="BugConcurrent_clients_SF_1504657" />
     <antcall target="BugConcurrent_sequences" />
     <antcall target="BugDatabaseMetaData_Bug_3356" />
+    <antcall target="BugSetQueryTimeout_Bug_3357" />
     <antcall target="BugDecimalRound_Bug_3561" />
   </target>
 
@@ -340,6 +341,12 @@ Copyright 1997 - July 2008 CWI, August 2008 - 2016 MonetDB B.V.
   <target name="BugDatabaseMetaData_Bug_3356">
     <antcall target="test_class">
       <param name="test.class" value="BugDatabaseMetaData_Bug_3356" />
+    </antcall>
+  </target>
+
+  <target name="BugSetQueryTimeout_Bug_3357">
+    <antcall target="test_class">
+      <param name="test.class" value="BugSetQueryTimeout_Bug_3357" />
     </antcall>
   </target>
 
